--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "magic-string": "^0.30.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "uuid": "^11.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -22,10 +23,11 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "plasmo": "^0.88.0",
     "prettier": "^3.3.1",
-    "typescript": "^5.4.5",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "typescript": "^5.4.5"
   },
   "manifest": {
     "host_permissions": [
