--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "magic-string": "^0.30.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "uuid": "^11.1.0",
+    "uuid": "^9.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -23,7 +23,7 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^10.0.0",
+    "@types/uuid": "^9.0.8",
     "plasmo": "^0.88.0",
     "prettier": "^3.3.1",
     "sharp": "^0.34.2",
@@ -46,7 +46,8 @@
     "web_accessible_resources": [
       {
         "resources": [
-          "contents/scraper.js"
+          "contents/scraper.js",
+          "contents/pubmed-scraper.js"
         ],
         "matches": [
           "<all_urls>"
