--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "web_accessible_resources": [
       {
         "resources": [
-          "contents/scraper.js",
-          "contents/pubmed-scraper.js"
+          "scraper.js",
+          "pubmed-scraper.js",
+          "confirmation.js",
+          "Readability.js"
         ],
         "matches": [
           "<all_urls>"
@@ -58,6 +60,11 @@
   "pnpm": {
     "overrides": {
       "sharp": "^0.34.2"
+    }
+  },
+  "plasmo": {
+    "build": {
+      "filename": "[name].js"
     }
   }
 }
